# htmpl

./: .gitignore  Makefile  README.md  conda-lock.yml  pyproject.toml
examples/: app.py  forms.py
examples/static/css/: app.css  foo.css
examples/static/js/: hmr.js
src/htmpl/: __init__.py  assets.py  cli.py  components.py  core.py  elements.py  fastapi.py  forms.py  htmx.py
src/htmpl/admin/: manager.py
src/thtml/: __init__.py  components.py  core.py  elements.py  fastapi.py  forms.py  htmx.py
static/: app.css
static/bundles/: home.c572d75a5e7a.css
tests/: test_components.py  test_core.py  test_elements.py  test_fastapi.py  test_forms.py  test_htmx.py
