[project]
name = "thtml"
version = "0.1.0"
description = "Type-safe HTML templating with Python 3.14 t-strings"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [{ name = "Bob", email = "bob@example.com" }]
keywords = ["html", "templating", "t-strings", "fastapi", "htmx", "pico"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Text Processing :: Markup :: HTML",
    "Typing :: Typed",
]

dependencies = []

[project.optional-dependencies]
fastapi = ["fastapi>=0.115"]
dev = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "httpx>=0.28",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.urls]
Homepage = "https://github.com/julython/thtml"
Documentation = "https://github.com/julython/thtml#readme"
Repository = "https://github.com/julython/thtml"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["thtml"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"  # mypy doesn't support 3.14 yet
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["thtml.*"]
disable_error_code = ["misc"]  # Ignore PEP 750 t-string errors until mypy supports them

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.conda-lock]
channels = [
  "conda-forge",
  "defaults"
]
platforms = [
  "linux-aarch64",
  "osx-arm64"
]

[tool.conda-lock.dependencies]
conda-lock = "*"
pip = "*"
python = "3.14"
setuptools = "*"
wheel = "*"
