[project]
name = "htmpl"
version = "0.4.3"
description = "Type-safe HTML templating with Python 3.14 t-strings"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [{ name = "Robert Myers", email = "robert@julython.org" }]
keywords = ["html", "templating", "t-strings", "fastapi", "htmx", "pico"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Text Processing :: Markup :: HTML",
  "Typing :: Typed",
]

dependencies = ["tdom", "click", "copier"]

[project.optional-dependencies]
all = ["fastapi>=0.115", "pydantic>=2.0"]
dev = [
  "fastapi>=0.115",
  "pydantic>=2.0",
  "pydantic[email]>=2.0",
  "uvicorn>=0.32",
  "httpx>=0.28",
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pytest-cov",
  "ruff>=0.8",
  "mypy>=1.13",
]

[project.urls]
Homepage = "https://github.com/rmyers/htmpl"
Documentation = "https://github.com/rmyers/htmpl#readme"
Repository = "https://github.com/rmyers/htmpl"

[project.scripts]
htmpl = "htmpl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/htmpl"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
  # "--test-alembic",
  "--log-cli-level=warning",
  # "--junitxml=junit/test-results.xml",
  "--cov=htmpl",
  "--cov-branch",
  "--cov-report=term-missing:skip-covered",
  "--cov-report=html",
  "--strict-markers",
  "--strict-config",
  "--verbose",
]

[tool.conda-lock]
channels = ["conda-forge", "defaults"]
platforms = ["linux-64", "linux-aarch64", "osx-arm64"]

[tool.conda-lock.dependencies]
pip = "*"
tdom = { source = "pypi" }
python = "3.14"
hatchling = "*"
conda-lock = "*"

[tool.conda-lock.pip-dependencies]
htmpl = { path = "src", editable = true }
